BNR/k8s/banners-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banners-client-service
  namespace: banners
spec:
  selector:
    app: banners-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
