BNR/k8s/banners-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: banners
  name: banners-server-service
spec:
  selector:
    app: banners-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
